Introduce modal pop-up for studios

--- a/index.html
+++ b/index.html
@@ -201,401 +201,15 @@
 
     <main id="main" class="main-left-margin">
 
-        <!-- Scroll cards category 1 -->
-
         <h1 class="cards-category"><a href="events.html" aria-label="Aerial and pole events">What's on</a></h1>
-        <section class="scroll-cards">
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of event</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">Date and location</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <div class="arrow-see-all-container">
-                <a href="events.html" aria-label="Aerial and pole events">
-                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
-                </a>
-            </div>
-        </section>
-
-        <!-- Scroll cards category 2 -->
+        <section class="scroll-cards" id="scroll-cards-events"></section>
 
         <h1 class="cards-category"><a href="studios.html" aria-label="Aerial and pole studios">Find a studio</a></h1>
-        <section class="scroll-cards">
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of studio</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <div class="arrow-see-all-container">
-                <a href="studios.html" aria-label="Aerial and pole studios">
-                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
-                </a>
-            </div>
-        </section>
-
-        <!-- Scroll cards category 3 -->
+        <section class="scroll-cards" id="scroll-cards-studios"></section>
 
         <h1 class="cards-category"><a href="clothing.html" aria-label="Aerial and polewear">Discover pole & aerial
                 wear</a></h1>
-        <section class="scroll-cards">
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
-                <div class="card-info">
-                    <div class="name-and-icon">
-                        <h2 class="item-name">Name of brand</h2>
-                        <button class="heart-icon" id="heart-icon"><img src="assets/heart-outline.svg"
-                                alt="Like"></button>
-                    </div>
-                    <p class="item-text">City, country</p>
-                    <div class="item-tags-group">
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                        <button class="item-tag">Tag</button>
-                    </div>
-                </div>
-            </article>
-
-            <div class="arrow-see-all-container">
-                <a href="clothing.html" aria-label="Aerial and polewear">
-                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
-                </a>
-            </div>
-        </section>
-
-        <!-- Scroll cards category 4 -->
+                <section class="scroll-cards" id="scroll-cards-clothing"></section>
 
         <h1 class="cards-category"><a href="allskills.html" aria-label="Aerial and pole resources">Find training
                 resources</a></h1>
