--- a/results.html
+++ b/results.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find aerial and pole studios in your area and around the world">
-    <title>Aerial and pole studios near you | Find aerial and pole studios around the world | The Aerial Arts Hub</title>
+    <meta name="description" content="Aerial and pole resources in your area and around the world">
+    <title>Aerial and pole resources | Search results | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
 </head>
@@ -203,15 +203,8 @@
 
     <main id="main lineup-main" class="lineup-main">
         <section class="not-modal" id="not-modal">
-        <section class="lineup-top" id="lineup-top">
-            <h1 class="lineup-h1">Find a studio</h1>
-            <div class="lineup-search-items">
-                <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
-                <input type="image" src="assets/magnify.svg" class="search-icon" id="lineup-search-icon" alt="Search">
-            </div>
-        </section>
         <section class="lineup-container" id="lineup-container">
-            <h1>All studios</h1>
+            <h1>Search results</h1>
             <div class="filter-menu" id="filter-menu"></div>
             <div class="lineup-lineup" id="lineup-lineup"></div>
         </section>
