--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="desktop-nav-search-items">
                 <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
-                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
+                <input type="image" src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search">
             </div>
             
             <ul class="nav-links">
@@ -187,7 +187,7 @@
                 <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
                 <div class="search-items">
                     <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
-                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+                    <input type="image" src="assets/magnify.svg" class="search-icon" id="nav-search-icon" alt="Search">
                 </div>
             </div>
             <div class="nav-social-links">
@@ -199,7 +199,13 @@
 
     </header>
 
+    <!-- main section -->
+
     <main id="main" class="main-left-margin">
+
+        <section class="lineup-item-modal" id="lineup-item-modal"></section>
+        
+        <section id="not-modal">
 
         <h1 class="cards-category"><a href="events.html" aria-label="Aerial and pole events">What's on</a></h1>
         <section class="scroll-cards" id="scroll-cards-events"></section>
@@ -532,6 +538,8 @@
                 </p>
             </div>
         </section>
+
+    </section>
 
     </main>
 
