--- a/signin.html
+++ b/signin.html
@@ -34,7 +34,7 @@
             </div>
             <div class="desktop-nav-search-items">
                 <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
-                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
+                <input type="image" src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search">
             </div>
 
             <ul class="nav-links">
@@ -192,7 +192,7 @@
                 <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
                 <div class="search-items">
                     <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
-                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+                    <input type="image" src="assets/magnify.svg" class="search-icon" id="nav-search-icon" alt="Search">
                 </div>
             </div>
             <div class="nav-social-links">
