Fix website-wide search results loading

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <section class="scroll-cards">
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Hoop/lyra</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hoop.html" aria-label="Hoop or lyra resources">Hoop/lyra</a></h2>
@@ -239,7 +239,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Silks</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="silks.html" aria-label="Silks resources">Silks</a></h2>
@@ -256,7 +256,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Trapeze</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="trapeze.html" aria-label="Trapeze resources">Trapeze</a></h2>
@@ -273,7 +273,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Hammock/sling</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hammock.html"
@@ -291,7 +291,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Pole</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="pole.html" aria-label="Pole resources">Pole</a></h2>
@@ -308,7 +308,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Straps</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="straps.html" aria-label="Straps resources">Straps</a></h2>
@@ -325,7 +325,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Rope</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="rope.html" aria-label="Rope resources">Rope</a></h2>
@@ -342,7 +342,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Hair hang</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="hairhang.html" aria-label="Hair hang resources">Hair hang</a></h2>
@@ -359,7 +359,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Specialty</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="otherskills.html"
@@ -390,7 +390,7 @@
         <section class="scroll-cards">
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Coaches</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="coaches.html" aria-label="Coaches">Find a coach</a></h2>
@@ -405,7 +405,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Performers</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="performers.html" aria-label="Performers">Discover performers</a>
@@ -421,7 +421,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Troupes and collectives</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="collectives.html" aria-label="Troupes and collectives">Explore
@@ -437,7 +437,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Retreats</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="retreats.html" aria-label="Retreats">Find a retreat</a></h2>
@@ -452,7 +452,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Competitions</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="competitions.html" aria-label="Competitions">Join a
@@ -468,7 +468,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Festivals</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="festivals.html" aria-label="Festivals">Find festivals</a></h2>
@@ -483,7 +483,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Physio and flexy</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="health.html" aria-label="Physios and flexibility resources">Find
@@ -499,7 +499,7 @@
             </article>
 
             <article class="card">
-                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="lineup-item-img" alt=""><h2 class="image-text">Photography and video</h2></div>
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name"><a href="photography.html"
